<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">calc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b0">0</string>
    <string name="bp">+</string>
    <string name="bm">-</string>
    <string name="bx">*</string>
    <string name="bd">/</string>
    <string name="br">=</string>
    <string name="result" />
    <string name="bc">C</string>
    <string name="lay1_text">    У лукоморья дуб зелёный;\n
    Златая цепь на дубе том:\n
    И днём и ночью <b>кот учёный</b>\n
    Всё ходит по цепи кругом;\n
    Идёт <b>направо</b> - песнь заводит,\n<b>Налево</b> - сказку говорит.</string>
    <string name="lay1_title">О программе</string>
    <string name="title_activity_main_activity1">MainActivity1</string>
    <color name="f1f">#ffffff</color>

</resources>